initial search functionality

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -18,3 +18,7 @@ $link-focus-border: $primary;
 // Import Bulma and Buefy styles
 @import "~bulma";
 @import "~buefy/src/scss/buefy";
+
+.stretch {
+  flex-grow: 1;
+}
