--- a/src/theme.scss
+++ b/src/theme.scss
@@ -15,6 +15,9 @@ $link: $primary;
 $link-invert: $primary-invert;
 $link-focus-border: $primary;
 
+$navbar-background-color: #e7e7e7;
+$navbar-item-color: #000;
+
 // Import Bulma and Buefy styles
 @import "~bulma";
 @import "~buefy/src/scss/buefy";
