--- a/src/index.scss
+++ b/src/index.scss
@@ -21,28 +21,90 @@ $navbar-item-color: #000;
 
 @import '../node_modules/bulma/sass/utilities/_all.sass';
 @import '../node_modules/bulma/sass/base/_all.sass';
-@import '../node_modules/bulma/sass/elements/button.sass';
-@import '../node_modules/bulma/sass/elements/container.sass';
-@import '../node_modules/bulma/sass/elements/form.sass';
-@import '../node_modules/bulma/sass/elements/title.sass';
-@import '../node_modules/bulma/sass/components/navbar.sass';
-@import '../node_modules/bulma/sass/layout/hero.sass';
-@import '../node_modules/bulma/sass/layout/section.sass';
+@import '../node_modules/bulma/sass/helpers/_all.sass';
+@import '../node_modules/bulma/sass/elements/_all.sass';
+@import '../node_modules/bulma/sass/components/_all.sass';
+@import '../node_modules/bulma/sass/layout/_all.sass';
+@import '../node_modules/bulma/sass/grid/_all.sass';
+@import '../node_modules/bulma/sass/form/_all.sass';
 
 .stretch {
   flex-grow: 1;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-weight: 300;
+  font-size: 14px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (min-width:600px) {
+  body {
+    font-size: 16px;
+  }
+}
+
+@media (min-width:800px) {
+  body {
+    font-size: .75em;
+  }
+}
+
+@media (min-width:1000px) {
+  body {
+    /* Never get larger than this */
+    font-size: 1em;
+  }
+}
+
+#page {
+  margin: 1em;
+}
+
+.navbar-item {
+  background-color: #e7e7e7;
+}
+
+.tag {
+  font-weight: 500;
+}
+
+.article {
+  margin-top: 20px;
+}
+
+.article-title {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+ul regulation.li, ol regulation.li {
+  line-height: 175%;
+}
+
+ul {
+  margin-left: 2em;
+}
+
+.indent-1 {
+  margin-left: 0em;
+}
+
+.indent-2 {
+  margin-left: 2em;
+}
+
+.indent-3 {
+  margin-left: 4em;
+}
+
+.indent-4 {
+  margin-left: 8em;
+}
+
+:target > div {
+  background-color: yellow;
+}
+
+:target > div > .tag {
+  background-color: rgb(240, 240, 0);
 }
